[package]
name = "link-preview"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"
description = "Retrieve website metadata such as title, description, preview image, author and more from OpenGraph, Google, Schema.org and Twitter compliant sites"
keywords = ["link", "schema-org", "open-graph", "website", "metadata"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["web-programming"]

[dependencies]
regex = "1.9.1"
reqwest = { version = "0.11.18", optional = true }
scraper = "0.16.0"
thiserror = "1.0.43"
url = "2.4.0"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["rt", "macros"] }

[features]
# Provide fetch capabilities
fetch = ["reqwest"]
