[package]
name = "link-preview"
version = "0.1.1"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"
description = "Retrieve website metadata such as title, description, preview image, author and more from OpenGraph, Google, Schema.org and Twitter compliant sites"
keywords = ["link", "schema-org", "open-graph", "website", "metadata"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["web-programming"]

[dependencies]
regex = "1.10.2"
reqwest = { version = "0.11.20", optional = true }
scraper = "0.17.1"
thiserror = "1.0.50"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.31.0", features = ["rt", "macros"] }

[features]
# Provide fetch capabilities
fetch = ["reqwest"]
